--- a/index.html
+++ b/index.html
@@ -1,3 +1,117 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>HTML Assignment-1</title>
+    </head>
+<body>
+    <header>
+        <h1>HTML Assignment-1</h1>
+    </header>
+<h1>This is my <i>first</i> assignment for HTML so please be nice!</h1>
+
+<p>I hope I do not screw this <b>first</b> assignment up to much!</p>
+<p>One of my favorite quotes is <q>Sometimes good people make bad choices. It doesn't mean they are bad people. It means they're human.</q></p>
+
+<bdo dir="rtl">
+    This text will go right-to-left because I want it to.
+</bdo>
+
+<!--Everything above is my Five from 'Basic HTML' and a few from the Five 'Formatting' that I needed to do for this assignment-->
+<figure>
+<img src="cold god.jpg" alt="Fantasy Mountain" width="35%">
+<figcaption>Fig.1 - Fantasy Mountain, Hikers climbing to frozen God.</figcaption>
+</figure>
+<p>
+<audio controls>
+    <source src="piano.mp3">
+</audio>
+</p>
+<figure>
+<video controls>
+    <source src="bear.mp4" width="25%">
+</video>
+<figcaption>Fig.2 - Bear in the river</figcaption>
+</figure>
+<!--Everything above is my Five from 'Images' and 'Audio/Video' that I needed to do -->
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="#">About</a>
+    <a href="media.html">Media</a>
+</nav>    
+
+<dl>
+    <dt>Favorite Fast Food Places</dt>
+    <dd>Wendys</dd>
+    <dd>Taco Bell</dd>
+    <dd>Dairy Queen</dd>
+</dl>
+
+<ul>
+    <li><bdi>Frosty</bdi>: 2nd Place</li>
+    <li><bdi>Freeze</bdi>: 3rd Place</li>
+    <li><bdi>Blizzard</bdi>: 1st Place</li>
+</ul>
+<ol>
+    <li><bdi>Baconator</bdi>: 1st Place</li>
+    <li><bdi>Beefy Five layer burrito</bdi>: 2nd Place</li>
+    <li><bdi>Chicken Strips and Frys</bdi>: 3rd Place</li>
+</ol>
+
+<a href="https://order.wendys.com/categories?site=menu">Visit to order from Wendys!</a>
+
+<!---Above is my Five from 'Links' and 'Lists' and the rest from 'Formatting' that I needed to do-->
+
+
+<!---
+<h1>Why You Should Stop 'Gamifying' Your Health and Fitness</h1>
+<h3>You don't need to chase a fake goal to be able to chase a real goal.</h3>
+<p>By <b>Beth Skwarecki</b></p>
+<img src="fitness.jpg" width="50%">
+<p>Whenever there’s a task you don’t want to do, there’s a guaranteed way to feel worse about it: Just add a whole layer of guilt and disappointment on top. Streaks that you’ll inevitably break, badges you don’t care about, check-in notifications that bug you when you were just trying to relax. Ahh, gamification.</p>
+<p>Before we talk about all the reasons gamification is bullshit, let’s talk about why games work the way they do. In a roleplaying game, you earn “experience points” as a metaphor for real-life experience. You earn fake money because it’s meant to mimic the concept of real-life money. You’re given a quest because, in real life, people work hard in pursuit of goals. Games have these metrics and structures because the game is trying to imitate real life.</p>
+
+<h3>Aim for consistency, not streaks</h3>
+<p>Streaks entertain you during good times with the explicit goal of heaping disappointment on you when you slip up. And they’re a particularly harmful type of misdirection, because people easily become more focused on the streak than on whatever reason they were doing the streak in the first place.</p>
+
+<ul>
+    <li>Running a local 5K, and trying to finish in the top X percent of your age group.</li>
+    <li>Competing in something like a powerlifting meet, where you try to put up the best possible total on meet day.</li>
+    <li>Joining a recreational sports league, and getting to know the members of your softball/soccer/pickleball team while either crushing the competition or commiserating about your inability to do so.</li>
+</ul>
+
+
+
+<button>Click!</button>
+
+<iframe width="'560" height="315" src="https://www.youtube.com/watch?v=Foe8Jet8TVA"></iframe>
+
+<ul>
+    <li>Idaho</li>
+    <li>Oregon</li>
+    <li>Washington</li>
+</ul>
+<ol>
+    <li>Idaho</li>
+    <li>Oregon</li>
+    <li>Washington</li>
+</ol>
+<p>Millie said, <q>HTML is the backbone of the web.</q></p>
+
+<a href="https://www.w3schools.com/">My Website!</a>
+<p>
+<img src="crested gecko1.jpg" alt="crested gecko" width="%10">
+</p>
+<p>
+<audio controls>
+    <source src="goons.mp3">
+</audio>
+</p>
+<video controls>
+    <source src="bear.mp4">
+</video>
+
+
 <h1>Hello World!</h1>
 <h2>I really want french toast</h2>
 
@@ -5,8 +119,15 @@
 
 <h6>This is cool</h6>
 
-<p>Visual Studio Code is a lightweight but powerful source code editor which runs on your desktop and is available for Windows, macOS and Linux. It comes with built-in support for JavaScript, TypeScript and Node.js and has a rich ecosystem of extensions for other languages and runtimes (such as C++, C#, Java, Python, PHP, Go, .NET).</p>
+<p>Visual Studio Code is a lightweight but powerful source code editor <br> which runs on your desktop and is available for Windows, macOS and Linux. It comes with built-in support for JavaScript, TypeScript and Node.js and has a rich ecosystem of extensions for other languages and runtimes (such as C++, C#, Java, Python, PHP, Go, .NET).</p>
 <p>This is a <b>bold</b> word.</p>
 <p>Now this is a <i>Italic</i> word.</p>
 
-<p style="background-color:Orange;"> I really like oranges</p>
+I used this code because I am still learning-->
+
+<footer>
+    <p>©Rhys Vickers. All Rights Reserved</p>
+</footer>
+
+</body>
+</html>
