--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 I used this code because I am still learning-->
 
 <footer>
-    <p>©Rhys Vickers. All Rights Reserved</p>
+    <p>©Rhys Vickers.. All Rights Reserved</p>
 </footer>
 
 </body>
