--- a/index.html
+++ b/index.html
@@ -1,38 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>HTML Assignment-1</title>
+        <title>Index</title>
+    </head>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <head>
+ 
     </head>
 <body>
     <header>
-        <h1>HTML Assignment-1</h1>
+        <h1>CSS Assignment</h1>
     </header>
-<h1>This is my <i>first</i> assignment for HTML so please be nice!</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="nested.html">Nested</a>
+        <a href="tags.html">Tags</a>
+        <a href="media.html">Media</a>
+    </nav>
+
+    <div class="box2">I hope this animation works</div>
+    
+    
+
+    <h3>Im going to add so many colors for this asssignment</h3>
+
+    <p>I am kind of getting the hang of CSS, but it is still a bit hard</p>
+
+    <h1 class="example">This is a weird heading</h1>
+
+    <h3 class="example example2">This is another weird heading</h3>
+
+    <section id="container">
+        <p>I hope I am doing this right</p>
+        <a href="#">This is a fake link</a>
+    </section>
+
+    <section id="container2">
+        <p>This is a paragraph</p>
+        <a href="#">Maybe this is a real link</a>
+    </section>
+
+    <section class="container">
+        <p>So many paragraphs!</p>
+        <a href="#"> Not even close to a real link</a>
+        <div>
+            <a href="#"> This isn't real either</a>
+        </div>
+    </section>
+
+    <section class="container3">
+        <p>I also have a lot of containers</p>
+        <a href="#">This is a real link</a>
+        <div>
+            <a href="#">So is this</a>
+        </div>
+    </section>
+
+    <div class="pseudo">Hover over me!</div>
+
+    <p class="sample">It is starting to get a little confusing!</p>
+
+    <div class="box">I finally watched Black Panter 2 and I thought it was pretty dope.</div>
+
+    <div class="sticky">I am quite sticky!</div>
+
+    <div class="absolute">I am absolute!</div>
+
+    <!--
+    <ul><li><a href="index.html">Index Page</a></li></ul>
+    <ul><li><a href="nested.html">Nested</a></li></ul>
+<ul><li><a href="tags.html">Tags</a></li></ul>
+<ul><li><a href="media.html">Media</a></li></ul>
+
+<div class="pseudo">This is a puesdo div </div>
+
+<a class="pseudo2" href="#">Click!</a>
+
+
+<div>Block-level element</div>
+<div>Block-level element</div>
+
+<span>Inline element</span>
+<span>Inline element</span>
+
+<div class="box">I want Taco Bell</div>
+
+<p>I am pretty hungry</p>
+<p>Lucky for me I work on a food truck</p>
+<p>I should probably eat healthier though</p>
+
+<div>
+    <p>I dont feel like typing Lorem Ipsum</p>
+</div>
+
+
+<h1>This is my <i>second</i> assignment for HTML so please be nice!</h1>
+
+
 
 <p>I hope I do not screw this <b>first</b> assignment up to much!</p>
+
 <p>One of my favorite quotes is <q>Sometimes good people make bad choices. It doesn't mean they are bad people. It means they're human.</q></p>
 
 <bdo dir="rtl">
     This text will go right-to-left because I want it to.
 </bdo>
 
-<!--Everything above is my Five from 'Basic HTML' and a few from the Five 'Formatting' that I needed to do for this assignment-->
-<figure>
-<img src="cold god.jpg" alt="Fantasy Mountain" width="35%">
-<figcaption>Fig.1 - Fantasy Mountain, Hikers climbing to frozen God.</figcaption>
-</figure>
-<p>
-<audio controls>
-    <source src="piano.mp3">
-</audio>
-</p>
-<figure>
-<video controls>
-    <source src="bear.mp4" width="25%">
-</video>
-<figcaption>Fig.2 - Bear in the river</figcaption>
-</figure>
-<!--Everything above is my Five from 'Images' and 'Audio/Video' that I needed to do -->
+Everything above is my Five from 'Basic HTML' and a few from the Five 'Formatting' that I needed to do for this assignment
+
+Everything above is my Five from 'Images' and 'Audio/Video' that I needed to do
 
 <nav>
     <a href="index.html">Home</a>
@@ -60,7 +138,26 @@
 
 <a href="https://order.wendys.com/categories?site=menu">Visit to order from Wendys!</a>
 
-<!---Above is my Five from 'Links' and 'Lists' and the rest from 'Formatting' that I needed to do-->
+Above is my Five from 'Links' and 'Lists' and the rest from 'Formatting' that I needed to do-->
+
+
+<table>
+    <tr>
+        <th>Course</th>
+        <th>Time</th>
+    </tr>
+    <tr>
+        <td>Media Writing</td>
+        <td>10:30am</td>
+    </tr>
+    <tr>
+        <td>Web Design</td>
+        <td>1:30pm</td>
+    </tr>
+</table>
+
+
+
 
 
 <!---
