--- a/media.html
+++ b/media.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Media</title>
+        <title>WordPress/Squarespace</title>
+    </head>
+    <head>
+        <link rel="stylesheet" href="style.css">
     </head>
 <body>
-
-    <header>
-        <h1>HTML Assignment-2 Media</h1>
-    </header>
+    
+   
+    <div class="topnav">
     <nav>
         <a href="index.html">Home</a>
-        <a href="nested.html">Nested</a>
-        <a href="tags.html">Tags</a>
-        <a href="media.html">Media</a>
+        <a href="tags.html">HTML/CSS</a>    
+        <a href="media.html">WordPress/Squarespace</a>
+        <a href="nested.html">Other Work</a>
     </nav>
-    <ul><li><a href="index.html">Index Page</a></li></ul>
-    <ul><li><a href="nested.html">Nested</a></li></ul>
-<ul><li><a href="tags.html">Tags</a></li></ul>
-<ul><li><a href="media.html">Media</a></li></ul>
+    </div>
+    <header>
+        <h1>WordPress and Squarespace Websites</h1>
+    </header>
+    <center>
+        <img src="puffs.jpg" width="750" height="425">
+    </center>
 
-    <figure>
-        <img src="cold god.jpg" alt="Fantasy Mountain" width="35%">
-        <figcaption>Fig.1 - Fantasy Mountain, Hikers climbing to frozen God.</figcaption>
-        </figure>
-        <p>
-        <audio controls>
-            <source src="piano.mp3">
-        </audio>
-        </p>
-        <figure>
-        <video controls>
-            <source src="bear.mp4" width="25%">
-        </video>
-        <figcaption>Fig.2 - Bear in the river</figcaption>
-        </figure>
+    <h3>Reflection</h3>
+    <p>After starting off the year with coding I felt like these assignments were a little bit easier. It shows that you don't need to go deep into coding (which can be seem scary) to make good website for whatever you need a website for! I made my WordPress website about getting to know me and my Squarespace website to promote the buisness I work for.</p>
 
 
-   
+
+<h4>WordPress Website</h4>
+<center>
+    <p>
+    <a href="https://rhysvickers289.wordpress.com/"> Visit My WordPress</a>
+    </p>
+</center>
+
+
+
+
+
 <footer>
-    <p>©Rhys Vickers.. All Rights Reserved</p>
+    <h2>©Rhys Vickers. All Rights Reserved</h2>
 </footer>
 
 </body>
