--- a/nested.html
+++ b/nested.html
@@ -27,20 +27,16 @@
     <h3>Reflection</h3>
     <p>This is my last semester and I have been able to do a lot of fun things at BSU. I feel like I have grown a lot and have a newfound interest in coding in which I hope to pursue in the future after I graduate. Here are a few of my favorite things that I have been able to work on in my time at Boise State!</p>
 
-    <center>
-        <p>
-            <a href="https://www.youtube.com/watch?v=GobuVApQoSc"> Unconventional Love Film</a>
-            </p>
-            <p>
-            <a href="https://www.youtube.com/watch?v=5sTI4-wR5fY&t=19s"> Tilt Shift Video</a>
-            </p>
-            <p>
-            <a href="https://www.youtube.com/watch?v=mIJbmTpKhrI&t=3s"> Spooky Short Film</a>    
-            </p>
-            <p>
-            <a href="https://www.youtube.com/watch?v=t2gF-BcSVQw&t=17s"> Tattoo Shop Video</a>    
-            </p>
-    </center>
+
+<center>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/GobuVApQoSc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5sTI4-wR5fY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mIJbmTpKhrI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RMf8UsHCiQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</center>
 
     <h2>©Rhys Vickers. All Rights Reserved</h2>
 </footer>
