--- a/nested.html
+++ b/nested.html
@@ -25,7 +25,7 @@
     </center>
     
     <h3>Reflection</h3>
-    <p>This is my last semester and I have been able to do a lot of fun things at BSU. I feel like I have grown a lot and have a newfound interest in coding in which I hope to pursue in the future after I graduate. Here are a few of my favorite things that I have been able to work on in my time at Boise State!</p>
+    <p>This is my last semester and I have been able to do a lot of fun things at BSU within the Media and Film Departments. I feel like I have grown a lot and have a newfound interest in coding in which I hope to pursue in the future after I graduate. Here are a few of my favorite things that I have been able to work on in my time at Boise State!</p>
 
 
 <center>
